fix: navigation mobile responsivity

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -27,6 +27,7 @@
     flex-basis: 0;
 }
 
+
 @media only screen and (max-width: 920px) {
     .header.open {
         margin: 0;
@@ -53,8 +54,15 @@
         width: 100%;
     }
 
-    .header>a {
+    .header>a, .header>.navButtons {
         display: none;
+    }
+
+    .header.open>.navButtons {
+        padding: 2rem 2rem;
+        gap: 0.5rem;
+        display: flex;
+        align-items: end;
     }
 
     /*
